Add Spring Boot Actuator
This commit adds the Spring Boot Actuator Starter and exposes various
actuator endpoints.

Spring GraphQL provides several metrics that are useful for learning
about the data fetching model of your application and possible
performance issues.

You can explore all the `graphql.*` metrics listed under
http://localhost:8080/actuator/metrics/

Note that, like all actuator metrics, you can refine stats using Tags,
see: http://localhost:8080/actuator/metrics/graphql.datafetcher?tag=path:profile

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.experimental:graphql-spring-boot-starter:1.0.0-SNAPSHOT'
 	implementation 'com.querydsl:querydsl-core'
 	implementation 'com.querydsl:querydsl-jpa'
